# Bala

./: README.md
01_hello_world_01/: CMakeLists.txt  main.cpp
02_excel_01/: Module1.bas  README.md  ThisWorkbook.cls  deffile.def  square.cpp
02_excel_01/squaredll/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  x86_debug.profile
02_excel_01/squaredll/src/: main.cpp  squaredll.cpp  squaredll.h
02_excel_01/squaredll/test_package/: conanfile.py
03_breakout/: Cargo.toml  index.html
03_breakout/src/: main.rs
04_CAPIATL/Rice_CAPIATL/: Rice_CAPIATL.sln
04_CAPIATL/Rice_CAPIATL/CAPIATL_Client/: CAPIATL_Client.csproj  Form1.Designer.cs  Form1.cs  Program.cs
04_CAPIATL/Rice_CAPIATL/CAPIATL_Proxy/: CAPIATL_API.cs  CAPIATL_Proxy.csproj
04_CAPIATL/ref/: CAPIATL_Client.dll.manifest  ConcordsCAPIATL.dll.manifest  ConcordsCAPIATLx86.dll.manifest  Native.CAPIATL_Proxy_x64.manifest  Native.CAPIATL_Proxy_x86.manifest  NetConcordsCAPIATL.dll.manifest  install.vbs  registerfree.bat  uninstall.vbs
05_WM_COPYDATA/: Cargo.toml
05_WM_COPYDATA/src/: main.rs
breakout/: Cargo.toml
breakout/src/: main.rs
