[package]
name = "breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
# rumqttc = { version = "0.23.0", features = ["websocket"] }
# tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
